Add parsing of time-zones from the config file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Utkarsh Upadhyay <musically.ut@gmail.com>"]
 
 [dependencies]
-chrono = "0.3"
+chrono = ">=0.3"
+chrono-tz = ">=0.3.0"
