Change name of binary from 'tz_cli' to 'tz'.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ authors = ["Utkarsh Upadhyay <musically.ut@gmail.com>"]
 [dependencies]
 chrono = ">=0.3"
 chrono-tz = ">=0.3.0"
+
+[[bin]]
+name = "tz"
+path = "src/main.rs"
